@@ -2,3 +2,4 @@
 启动JVM加入如下参数
 #### 解决：
 --add-opens java.base/java.time=ALL-UNNAMED
+java --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.net.util=ALL-UNNAMED -jar XXXXX.jar
